// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`grouping contains link pointing to course url 1`] = `
<div
  className="Grouping-styles__root planner-grouping"
>
  <NotificationBadge
    responsiveSize="large"
  />
  <a
    className="Grouping-styles__hero Grouping-styles__heroHover"
    href="example.com"
    style={
      Object {
        "backgroundImage": "url()",
      }
    }
  >
    <span
      className="Grouping-styles__overlay"
      style={
        Object {
          "backgroundColor": "#5678",
        }
      }
    />
    <span
      className="Grouping-styles__title"
    >
      Board Games
    </span>
  </a>
  <ol
    className="Grouping-styles__items"
    style={
      Object {
        "borderColor": "#5678",
      }
    }
  >
    <li
      key="five"
    >
      <Animatable(ResponsivePlannerItem)
        animatableIndex={101}
        color="#5678"
        context={
          Object {
            "color": "#5678",
            "id": 256,
            "url": "example.com",
          }
        }
        courseName="Board Games"
        date={"2017-04-25T13:06:07.000Z"}
        id="5"
        showNotificationBadge={false}
        theme={
          Object {
            "iconColor": "#5678",
          }
        }
        timeZone="America/Denver"
        title="San Juan"
        toggleCompletion={[Function]}
        uniqueId="five"
        updateTodo={[Function]}
      />
    </li>
    <li
      key="six"
    >
      <Animatable(ResponsivePlannerItem)
        animatableIndex={102}
        color="#5678"
        context={
          Object {
            "color": "#5678",
            "id": 256,
          }
        }
        courseName="Board Games"
        date={"2017-04-25T13:06:07.000Z"}
        id="6"
        showNotificationBadge={false}
        theme={
          Object {
            "iconColor": "#5678",
          }
        }
        timeZone="America/Denver"
        title="Roll for the Galaxy"
        toggleCompletion={[Function]}
        uniqueId="six"
        updateTodo={[Function]}
      />
    </li>
  </ol>
</div>
`;

exports[`renders a CompletedItemsFacade when completed items are present by default 1`] = `
<div
  className="Grouping-styles__root planner-grouping"
>
  <NotificationBadge
    responsiveSize="large"
  />
  <a
    className="Grouping-styles__hero Grouping-styles__heroHover"
    href="example.com"
    style={
      Object {
        "backgroundImage": "url()",
      }
    }
  >
    <span
      className="Grouping-styles__overlay"
      style={
        Object {
          "backgroundColor": "#5678",
        }
      }
    />
    <span
      className="Grouping-styles__title"
    >
      Board Games
    </span>
  </a>
  <ol
    className="Grouping-styles__items"
    style={
      Object {
        "borderColor": "#5678",
      }
    }
  >
    <li
      key="six"
    >
      <Animatable(ResponsivePlannerItem)
        animatableIndex={101}
        color="#5678"
        context={
          Object {
            "color": "#5678",
            "id": 256,
          }
        }
        courseName="Board Games"
        date={"2017-04-25T13:06:07.000Z"}
        id="6"
        showNotificationBadge={false}
        theme={
          Object {
            "iconColor": "#5678",
          }
        }
        timeZone="America/Denver"
        title="Roll for the Galaxy"
        toggleCompletion={[Function]}
        uniqueId="six"
        updateTodo={[Function]}
      />
    </li>
    <li
      key="completed"
    >
      <Animatable(CompletedItemsFacade)
        animatableIndex={102}
        animatableItemIds={
          Array [
            "five",
          ]
        }
        badges={Array []}
        date={"2017-04-25T06:00:00.000Z"}
        itemCount={1}
        notificationBadge="none"
        onClick={[Function]}
        responsiveSize="large"
        theme={
          Object {
            "labelColor": "#5678",
          }
        }
      />
    </li>
  </ol>
</div>
`;

exports[`renders the base component with required props 1`] = `
<div
  className="Grouping-styles__root planner-grouping"
>
  <NotificationBadge
    responsiveSize="large"
  />
  <a
    className="Grouping-styles__hero Grouping-styles__heroHover"
    href="example.com"
    style={
      Object {
        "backgroundImage": "url()",
      }
    }
  >
    <span
      className="Grouping-styles__overlay"
      style={
        Object {
          "backgroundColor": "#5678",
        }
      }
    />
    <span
      className="Grouping-styles__title"
    >
      Board Games
    </span>
  </a>
  <ol
    className="Grouping-styles__items"
    style={
      Object {
        "borderColor": "#5678",
      }
    }
  >
    <li
      key="five"
    >
      <Animatable(ResponsivePlannerItem)
        animatableIndex={101}
        color="#5678"
        context={
          Object {
            "color": "#5678",
            "id": 256,
            "url": "example.com",
          }
        }
        courseName="Board Games"
        date={"2017-04-25T13:06:07.000Z"}
        id="5"
        showNotificationBadge={false}
        theme={
          Object {
            "iconColor": "#5678",
          }
        }
        timeZone="America/Denver"
        title="San Juan"
        toggleCompletion={[Function]}
        uniqueId="five"
        updateTodo={[Function]}
      />
    </li>
    <li
      key="six"
    >
      <Animatable(ResponsivePlannerItem)
        animatableIndex={102}
        color="#5678"
        context={
          Object {
            "color": "#5678",
            "id": 256,
          }
        }
        courseName="Board Games"
        date={"2017-04-25T13:06:07.000Z"}
        id="6"
        showNotificationBadge={false}
        theme={
          Object {
            "iconColor": "#5678",
          }
        }
        timeZone="America/Denver"
        title="Roll for the Galaxy"
        toggleCompletion={[Function]}
        uniqueId="six"
        updateTodo={[Function]}
      />
    </li>
  </ol>
</div>
`;

exports[`renders to do items correctly 1`] = `
<div
  className="Grouping-styles__root planner-grouping"
>
  <NotificationBadge
    responsiveSize="large"
  />
  <span
    className="Grouping-styles__hero"
  >
    <span
      className="Grouping-styles__overlay"
      style={
        Object {
          "backgroundColor": null,
        }
      }
    />
    <span
      className="Grouping-styles__title"
    >
      To Do
    </span>
  </span>
  <ol
    className="Grouping-styles__items"
    style={
      Object {
        "borderColor": null,
      }
    }
  >
    <li
      key="seven hundred"
    >
      <Animatable(ResponsivePlannerItem)
        animatableIndex={101}
        color={null}
        context={Object {}}
        courseName={null}
        date={"2017-06-16T11:06:07.000Z"}
        id="700"
        showNotificationBadge={false}
        theme={
          Object {
            "iconColor": null,
          }
        }
        timeZone="America/Denver"
        title="To Do 700"
        toggleCompletion={[Function]}
        uniqueId="seven hundred"
        updateTodo={[Function]}
      />
    </li>
  </ol>
</div>
`;
